task 6 complete - spacing issues and border corrected

--- a/css/index.css
+++ b/css/index.css
@@ -238,9 +238,10 @@ img {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  padding: 80px 5%;
+  padding: 50px 5%;
+  margin-bottom: 20px;
   border-top: 1px solid #e0e0e0;
-  border-bottom: 1px solid red;
+  border-bottom: 1px solid #e0e0e0;
 }
 .home .bottom-content .text-content {
   width: 45%;
@@ -266,8 +267,12 @@ img {
 }
 .home .bottom-content .space-walk {
   width: 45%;
+  border-radius: 10px;
 }
 @media (max-width:500px) {
+  .home .homepage-header-img {
+    margin-top: 100px;
+  }
   .home .middle-launch-images .sky-img,
   .home .middle-launch-images .launch-img {
     display: none;
@@ -284,7 +289,7 @@ img {
   }
   .home .bottom-content .text-content {
     width: 86%;
-    margin-bottom: 40px;
+    margin-bottom: 30px;
   }
   .home .bottom-content .text-content .sign-up-button {
     width: 100%;
